# xineramaGetCurrentMonitor

./: .clang-format  .gitignore  CMakeLists.txt  README.md
srcs/: main.c
